tests/invalid/fractional_stoichiometry_zero.esm
{
  "esm": "0.2.0",
  "metadata": {
    "name": "FractionalStoichiometryZeroTest",
    "description": "Fractional stoichiometry equal to zero — v0.2.x schema rejects via exclusiveMinimum (gt-1e96).",
    "authors": ["Test Author"]
  },
  "reaction_systems": {
    "TestRxns": {
      "species": {
        "A": {"units": "mol/mol", "default": 1e-6},
        "B": {"units": "mol/mol", "default": 2e-6}
      },
      "parameters": {
        "k": {"units": "1/s", "default": 1e-3}
      },
      "reactions": [
        {
          "id": "R1",
          "substrates": [
            {"species": "A", "stoichiometry": 1}
          ],
          "products": [
            {"species": "B", "stoichiometry": 0.0}
          ],
          "rate": "k"
        }
      ]
    }
  }
}
